--- a/styles/global.css
+++ b/styles/global.css
@@ -24,8 +24,10 @@
   --heading2: bold 2.5rem/1.20 var(--ff-syne);
   
   --ff-montserrat: "Montserrat", sans-serif;
-  --button-label: medium 1rem/1.50 var(--ff-montserrat);
-  --span: medium 0.875/1.50 var(--ff-montserrat);
+  --button-label: medium 1rem/1.5 var(--ff-montserrat);
+  --span: medium 0.75/1.3 var(--ff-inter);
+
+  --ff-inter: "Inter", sans-serif;
 }
 
 html, button {
@@ -38,4 +40,9 @@ h1 {
 
 h2 {
   font: var(--heading2);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
