--- a/styles/global.css
+++ b/styles/global.css
@@ -20,12 +20,12 @@
 
   /* font-family */
   --ff-syne: "Syne", sans-serif;
-  --heading1: bold 4rem/1.25 var(--ff-syne);
-  --heading2: bold 2.5rem/1.20 var(--ff-syne);
+  --heading1: 700 4rem/1.25 var(--ff-syne);
+  --heading2: 700 2.5rem/1.20 var(--ff-syne);
   
   --ff-montserrat: "Montserrat", sans-serif;
-  --button-label: medium 1rem/1.5 var(--ff-montserrat);
-  --span: medium 0.75/1.3 var(--ff-inter);
+  --button-label: 500 1rem/1.5 var(--ff-montserrat);
+  --span: 500 0.75/1.3 var(--ff-inter);
 
   --ff-inter: "Inter", sans-serif;
 }
