--- a/styles/global.css
+++ b/styles/global.css
@@ -21,21 +21,17 @@
   /* font-family */
   --ff-syne: "Syne", sans-serif;
   --heading1: 700 4rem/1.25 var(--ff-syne);
-  --heading2: 700 2.5rem/1.20 var(--ff-syne);
+  --heading2: 700 2.5rem/1.2 var(--ff-syne);
   
   --ff-montserrat: "Montserrat", sans-serif;
   --button-label: 500 1rem/1.5 var(--ff-montserrat);
-  --span: 500 0.75/1.3 var(--ff-inter);
+  --span: 500 0.875/1.5 var(--ff-montserrat);
 
   --ff-inter: "Inter", sans-serif;
 }
 
 html, button {
   font: var(--button-label);
-}
-
-html {
-  zoom: .4;
 }
 
 h1 {
